@@ -2084,6 +2084,8 @@ if|if
 condition|(
 name|isDependencyModuleExcluded
 argument_list|(
+name|dd
+argument_list|,
 name|rootModuleConf
 argument_list|,
 name|requestedDependencyRevisionId
@@ -2317,6 +2319,9 @@ specifier|private
 name|boolean
 name|isDependencyModuleExcluded
 parameter_list|(
+name|DependencyDescriptor
+name|dd
+parameter_list|,
 name|String
 name|rootModuleConf
 parameter_list|,
@@ -2327,13 +2332,9 @@ name|String
 name|conf
 parameter_list|)
 block|{
-return|return
-name|callers
-operator|.
-name|doesCallersExclude
-argument_list|(
-name|rootModuleConf
-argument_list|,
+name|Artifact
+name|a
+init|=
 name|DefaultArtifact
 operator|.
 name|newIvyArtifact
@@ -2342,8 +2343,209 @@ name|dependencyRevisionId
 argument_list|,
 literal|null
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|isRoot
+argument_list|()
+condition|)
+block|{
+comment|// no callers, but maybe some exclude
+name|Boolean
+name|exclude
+init|=
+name|doesExclude
+argument_list|(
+name|md
+argument_list|,
+name|rootModuleConf
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+name|rootModuleConf
+block|}
+argument_list|,
+name|dd
+argument_list|,
+name|a
+argument_list|,
+operator|new
+name|Stack
+argument_list|()
+argument_list|)
+decl_stmt|;
+return|return
+name|exclude
+operator|==
+literal|null
+condition|?
+literal|false
+else|:
+name|exclude
+operator|.
+name|booleanValue
+argument_list|()
+return|;
+block|}
+return|return
+name|callers
+operator|.
+name|doesCallersExclude
+argument_list|(
+name|rootModuleConf
+argument_list|,
+name|a
 argument_list|)
 return|;
+block|}
+name|Boolean
+name|doesExclude
+parameter_list|(
+name|ModuleDescriptor
+name|md
+parameter_list|,
+name|String
+name|rootModuleConf
+parameter_list|,
+name|String
+index|[]
+name|moduleConfs
+parameter_list|,
+name|DependencyDescriptor
+name|dd
+parameter_list|,
+name|Artifact
+name|artifact
+parameter_list|,
+name|Stack
+name|callersStack
+parameter_list|)
+block|{
+comment|// artifact is excluded if it match any of the exclude pattern for this dependency...
+if|if
+condition|(
+name|dd
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|dd
+operator|.
+name|doesExclude
+argument_list|(
+name|moduleConfs
+argument_list|,
+name|artifact
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getArtifactId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+name|Boolean
+operator|.
+name|TRUE
+return|;
+block|}
+block|}
+if|if
+condition|(
+name|md
+operator|.
+name|doesExclude
+argument_list|(
+name|moduleConfs
+argument_list|,
+name|artifact
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getArtifactId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+name|Boolean
+operator|.
+name|TRUE
+return|;
+block|}
+comment|// ... or if it is excluded by all its callers
+name|IvyNode
+name|c
+init|=
+name|getData
+argument_list|()
+operator|.
+name|getNode
+argument_list|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|c
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|callersStack
+operator|.
+name|contains
+argument_list|(
+name|c
+operator|.
+name|getId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+comment|// a circular dependency, we cannot be conclusive here
+return|return
+literal|null
+return|;
+block|}
+return|return
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|c
+operator|.
+name|doesCallersExclude
+argument_list|(
+name|rootModuleConf
+argument_list|,
+name|artifact
+argument_list|,
+name|callersStack
+argument_list|)
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+return|return
+name|Boolean
+operator|.
+name|FALSE
+return|;
+block|}
 block|}
 specifier|public
 name|boolean
