@@ -1557,6 +1557,8 @@ decl_stmt|;
 name|Boolean
 name|doesExclude
 init|=
+name|node
+operator|.
 name|doesExclude
 argument_list|(
 name|md
@@ -1625,156 +1627,6 @@ operator|.
 name|pop
 argument_list|()
 expr_stmt|;
-block|}
-block|}
-specifier|private
-name|Boolean
-name|doesExclude
-parameter_list|(
-name|ModuleDescriptor
-name|md
-parameter_list|,
-name|String
-name|rootModuleConf
-parameter_list|,
-name|String
-index|[]
-name|moduleConfs
-parameter_list|,
-name|DependencyDescriptor
-name|dd
-parameter_list|,
-name|Artifact
-name|artifact
-parameter_list|,
-name|Stack
-name|callersStack
-parameter_list|)
-block|{
-comment|// artifact is excluded if it match any of the exclude pattern for this dependency...
-if|if
-condition|(
-name|dd
-operator|!=
-literal|null
-condition|)
-block|{
-if|if
-condition|(
-name|dd
-operator|.
-name|doesExclude
-argument_list|(
-name|moduleConfs
-argument_list|,
-name|artifact
-operator|.
-name|getId
-argument_list|()
-operator|.
-name|getArtifactId
-argument_list|()
-argument_list|)
-condition|)
-block|{
-return|return
-name|Boolean
-operator|.
-name|TRUE
-return|;
-block|}
-block|}
-if|if
-condition|(
-name|md
-operator|.
-name|doesExclude
-argument_list|(
-name|moduleConfs
-argument_list|,
-name|artifact
-operator|.
-name|getId
-argument_list|()
-operator|.
-name|getArtifactId
-argument_list|()
-argument_list|)
-condition|)
-block|{
-return|return
-name|Boolean
-operator|.
-name|TRUE
-return|;
-block|}
-comment|// ... or if it is excluded by all its callers
-name|IvyNode
-name|c
-init|=
-name|node
-operator|.
-name|getData
-argument_list|()
-operator|.
-name|getNode
-argument_list|(
-name|md
-operator|.
-name|getModuleRevisionId
-argument_list|()
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-name|c
-operator|!=
-literal|null
-condition|)
-block|{
-if|if
-condition|(
-name|callersStack
-operator|.
-name|contains
-argument_list|(
-name|c
-operator|.
-name|getId
-argument_list|()
-argument_list|)
-condition|)
-block|{
-comment|// a circular dependency, we cannot be conclusive here
-return|return
-literal|null
-return|;
-block|}
-return|return
-name|Boolean
-operator|.
-name|valueOf
-argument_list|(
-name|c
-operator|.
-name|doesCallersExclude
-argument_list|(
-name|rootModuleConf
-argument_list|,
-name|artifact
-argument_list|,
-name|callersStack
-argument_list|)
-argument_list|)
-return|;
-block|}
-else|else
-block|{
-return|return
-name|Boolean
-operator|.
-name|FALSE
-return|;
 block|}
 block|}
 block|}
