@@ -27276,6 +27276,85 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveExcludesConf3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org2/mod2.6/ivys/ivy-0.14.xml"
+argument_list|)
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"exclude"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|report
+operator|.
+name|getModuleDescriptor
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org2"
+argument_list|,
+literal|"mod2.6"
+argument_list|,
+literal|"0.14"
+argument_list|)
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|getIvyFileInCache
+argument_list|(
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org2"
+argument_list|,
+literal|"mod2.5"
+argument_list|,
+literal|"0.9"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveExceptConfiguration
 parameter_list|()
 throws|throws
