@@ -1,0 +1,35 @@
+<!--
+   Licensed to the Apache Software Foundation (ASF) under one
+   or more contributor license agreements.  See the NOTICE file
+   distributed with this work for additional information
+   regarding copyright ownership.  The ASF licenses this file
+   to you under the Apache License, Version 2.0 (the
+   "License"); you may not use this file except in compliance
+   with the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing,
+   software distributed under the License is distributed on an
+   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+   KIND, either express or implied.  See the License for the
+   specific language governing permissions and limitations
+   under the License.    
+-->
+<ivy-module version="1.0">
+	<info organisation="org2"
+	       module="mod2.6"
+	       revision="0.14"
+	       status="integration"
+	/>
+    <configurations>
+        <conf name="default" />
+        <conf name="include" extends="default" />
+        <conf name="exclude" extends="default" />
+    </configurations>
+	<dependencies>
+		<dependency name="mod2.3" rev="0.4" conf="include->default" />
+		<dependency name="mod2.5" rev="0.9" conf="default->default" />
+        <exclude module="mod2.5" conf="exclude" />
+	</dependencies>
+</ivy-module>
